src/z80asm/z80asm2/t/30-directive/expected/undefine_01.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/30-directive//input/undefine_01.asm
Assembling t/30-directive/input/undefine_01.asm...
t/30-directive/input/undefine_01.asm:1:9: error: Expected identifier after UNDEFINE
    undefine ; no name
            ^
t/30-directive/input/undefine_01.asm:2:16: error: Unexpected token after UNDEFINE: world
    undefine hello world ; extra tokens
                   ^
# file: t/30-directive/input/undefine_01.asm
EndOfLine	"\n"	3:1	
